--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">The Rick and Morty java</string>
+    <string name="app_name">The Rick and Morty</string>
+    <string name="character">Персонажи</string>
+    <string name="location">Локаций</string>
+    <string name="episode">Эпизоды</string>
 </resources>
